Double deprecation fix